<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text=""
                android:layout_margin="4dp"
                android:textSize="20dp"/>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/Player1Name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/player_name1"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Player2Name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:text="@string/player_name2"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="64dp"
        android:textSize="30dp"
        app:layout_constraintStart_toEndOf="@+id/Player1Name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="35dp"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/Player2Name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="93dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="45dp"
        android:text="@string/game_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>